# mlops-timeseries

./: .gitignore  README.md  pyproject.toml  test_torch.py
.github/workflows/: ci.yml
config/: main.yaml  preprocessing.yaml
configs/: utsd_config.yaml
data/checkpoints/: lightgbm_study.pkl
data/metadata/: dataset_info.json
data/models/: xgboost_study.pkl
data/raw/: metadata.parquet
data/results/: evaluation_results_20241208_144808.json
mlops_timeseries/: __init__.py
mlops_timeseries/core/: utsd_pipeline.py
mlops_timeseries/data/: preprocessing.py  preprocessing2.py
mlops_timeseries/evaluation/: evaluate.py
mlops_timeseries/models/: train_mapie.py  trainer.py
mlops_timeseries/utils/: preprocess_data.py
notebooks/: 01_utsd_exploration.ipynb  data engineering.ipynb  dataset.ipynb  verify_torch.py
notebooks/parquet_data/: metadata.parquet
outputs/2024-12-08/00-48-00/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-08/00-52-16/.hydra/: config.yaml  hydra.yaml
tests/: test_basic.py
