[tool.poetry]
name = "mlops-timeseries"
version = "0.1.0"
description = ""
authors = ["priteshshah96 <priteshshahwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ray = {extras = ["tune"], version = "^2.40.0"}
dagster = "^1.9.4"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic = {extras = ["email"], version = "^2.10.3"}
pydantic-settings = "^2.6.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"
mlflow = "^2.18.0"
wandb = "^0.19.0"
python-multipart = "^0.0.19"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
httpx = "^0.28.1"
loguru = "^0.7.3"
joblib = "^1.4.2"
ipykernel = "^6.29.5"
jupyterlab = "^4.3.2"
datasets = "^3.1.0"
huggingface-hub = "^0.26.5"
polars = "^1.16.0"
lightgbm = "^4.5.0"
optuna = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
ruff = "^0.8.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=mlops_timeseries --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
